# mpi-omp-counting-stars

./: CMakeLists.txt  main.c
analysis/: cluster_time.csv  executor.sh  single_time.csv  stars_count.csv  test.fish
include/: fifo_pix_queue.h  imagelib.h  list_link.h
src/: fifo_pix_queue.c  imagelib.c  list_link.c
